--- a/tests/tests.vcxproj
+++ b/tests/tests.vcxproj
@@ -104,7 +104,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="tests.cpp" />
+    <ClCompile Include="tests_rpc.cpp" />
+    <ClCompile Include="tests_traits.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\UnitTest++\unittestpp_vs2015.vcxproj">
