--- a/tests/tests.vcxproj.filters
+++ b/tests/tests.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="testsPCH.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Semaphore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="tests_main.cpp">
