--- a/samples/Chat/ChatServer/ChatServer.vcxproj.filters
+++ b/samples/Chat/ChatServer/ChatServer.vcxproj.filters
@@ -15,18 +15,18 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
+    <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="targetver.h">
+    <ClInclude Include="ChatServerPCH.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="stdafx.cpp">
+    <ClCompile Include="ChatServer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ChatServer.cpp">
+    <ClCompile Include="ChatServerPCH.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
