--- a/source/czrpc.vcxproj
+++ b/source/czrpc.vcxproj
@@ -19,6 +19,7 @@
     <ClInclude Include="crazygaze\rpc\RPCGenerate.h" />
     <ClInclude Include="crazygaze\rpc\RPCParamTraits.h" />
     <ClInclude Include="crazygaze\rpc\RPCProcessor.h" />
+    <ClInclude Include="crazygaze\rpc\RPCReply.h" />
     <ClInclude Include="crazygaze\rpc\RPCStream.h" />
     <ClInclude Include="crazygaze\rpc\RPCTable.h" />
     <ClInclude Include="crazygaze\rpc\RPCTransport.h" />
