--- a/source/czrpc.vcxproj.filters
+++ b/source/czrpc.vcxproj.filters
@@ -49,5 +49,8 @@
     <ClInclude Include="crazygaze\rpc\RPCResult.h">
       <Filter>crazygaze\rpc</Filter>
     </ClInclude>
+    <ClInclude Include="crazygaze\rpc\RPCAny.h">
+      <Filter>crazygaze\rpc</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
