--- a/tests/tests.vcxproj.filters
+++ b/tests/tests.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="Foo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="tests_any.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
