--- a/tests/tests.vcxproj
+++ b/tests/tests.vcxproj
@@ -63,6 +63,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)..;$(SolutionDir)..\source;$(SolutionDir)..\asio\asio\include</AdditionalIncludeDirectories>
       <WarningLevel>Level3</WarningLevel>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
+      <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -83,6 +84,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)..;$(SolutionDir)..\source;$(SolutionDir)..\asio\asio\include</AdditionalIncludeDirectories>
       <WarningLevel>Level3</WarningLevel>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
+      <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
