--- a/samples/Chat/ChatClient/ChatClient.vcxproj
+++ b/samples/Chat/ChatClient/ChatClient.vcxproj
@@ -101,6 +101,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SamplesCommon\SamplesCommon.vcxproj">
+      <Project>{faa83184-44a8-47e1-9770-e9b483aae9ac}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
