Preliminary work for the Benchmark sample

--- a/samples/Benchmark/Benchmark.vcxproj.filters
+++ b/samples/Benchmark/Benchmark.vcxproj.filters
@@ -18,27 +18,15 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SamplesCommonPCH.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="StringUtil.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Parameters.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="SimpleServer.h">
+    <ClInclude Include="BenchmarkPCH.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SamplesCommonPCH.cpp">
+    <ClCompile Include="Benchmark.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="StringUtil.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Parameters.cpp">
+    <ClCompile Include="BenchmarkPCH.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
