--- a/tests/tests.vcxproj.filters
+++ b/tests/tests.vcxproj.filters
@@ -47,5 +47,11 @@
     <ClCompile Include="tests_any.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="tests_doc_a_small_taste.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tests_doc_paramtraits.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
