--- a/tests/tests.vcxproj
+++ b/tests/tests.vcxproj
@@ -105,6 +105,8 @@
   <ItemGroup>
     <ClCompile Include="Foo.cpp" />
     <ClCompile Include="tests_any.cpp" />
+    <ClCompile Include="tests_doc_paramtraits.cpp" />
+    <ClCompile Include="tests_doc_a_small_taste.cpp" />
     <ClCompile Include="tests_main.cpp" />
     <ClCompile Include="testsPCH.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
