--- a/tests/tests.vcxproj
+++ b/tests/tests.vcxproj
@@ -113,6 +113,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="tests_rpc.cpp" />
+    <ClCompile Include="tests_tcpsocket.cpp" />
     <ClCompile Include="tests_traits.cpp" />
   </ItemGroup>
   <ItemGroup>
