imported patch cmake

--- a/.hgignore
+++ b/.hgignore
@@ -24,6 +24,8 @@ syntax: regexp
 ^asio/
 ^boost/
 ^build/
+^buildcmake/
 ^doc/themes/purehugo/.git
 # Remove this ignore once I start working on the documentation
 ^doc/
+^.idea/
