imported patch tcptransport

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -50,6 +50,7 @@ SET(SOURCE_FILES
 		"tests_doc_paramtraits.cpp"
 		"tests_main.cpp"
 		"tests_rpc.cpp"
+		"tests_rpc_tcp.cpp"
 		"tests_tcpsocket.cpp"
 		"tests_traits.cpp"
 		)
