--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -23,4 +23,8 @@ SET(SOURCE_FILES
 add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})
 set(${PROJECT_NAME}_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}
     CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
+
+include_directories(
+	${PROJECT_NAME}_INCLUDE_DIRS}
+)
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
