imported patch cleanup

--- a/UnitTest++/CMakeLists.txt
+++ b/UnitTest++/CMakeLists.txt
@@ -20,6 +20,10 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/lib)
 
+if (MSVC)
+	SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D \"_CRT_SECURE_NO_WARNINGS\" /MP")
+endif()
+
 file(GLOB SOURCE_FILES_1
 		"UnitTest++/*.cpp"
 		"UnitTest++/*.h" )
