imported patch cmake3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,19 @@
 cmake_minimum_required(VERSION 3.5)
 project(czrpc)
 
+
+set_property( GLOBAL PROPERTY USE_FOLDERS ON )
+
 # Will cause building to display what compiler parameters are being used, among other things
 SET(CMAKE_VERBOSE_MAKEFILE_ON)
 
 add_subdirectory(UnitTest++) # Foo is a static library
 add_subdirectory(source)
 add_subdirectory(tests)
+
+add_subdirectory(samples/SamplesCommon)
+add_subdirectory(samples/CalculatorServer)
+
+
+
+#set_property(TARGET ${SAMPLE} PROPERTY FOLDER "${VIRTUAL_FOLDER}")
