--- a/samples/CalculatorServer/CMakeLists.txt
+++ b/samples/CalculatorServer/CMakeLists.txt
@@ -1,22 +1,15 @@
 cmake_minimum_required(VERSION 3.5)
-project(tests)
+project(CalculatorServer)
 
-include(../utils.cmake)
+include(../../utils.cmake)
 
 SET(SOURCE_FILES
-		"Foo.h" "Foo.cpp"
-		"Semaphore.h"
-		"tests_any.cpp"
-		"tests_doc_a_small_taste.cpp"
-		"tests_doc_paramtraits.cpp"
-		"tests_main.cpp"
-		"tests_rpc.cpp"
-		"tests_rpc_tcp.cpp"
-		"tests_tcpsocket.cpp"
-		"tests_traits.cpp"
+		"CalculatorInterface.h"
+		"CalculatorServer.cpp"
+		"targetver.h"
 		)
 
-ADD_MSVC_PRECOMPILED_HEADER("testsPCH.h" "testsPCH.cpp" SOURCE_FILES)
+ADD_MSVC_PRECOMPILED_HEADER("${PROJECT_NAME}PCH.h" "${PROJECT_NAME}PCH.cpp" SOURCE_FILES)
 
 message( "CMAKE_EXE_LINKER_FLAGS = " ${CMAKE_EXE_LINKER_FLAGS})
 message( "COMPILER FLAGS USED")
@@ -27,15 +20,14 @@ message( "CMAKE_CXX_FLAGS_MINSIZEREL     = " ${CMAKE_CXX_FLAGS_MINSIZEREL})
 message( "CMAKE_CXX_FLAGS_RELWITHDEBINFO = " ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})
 
 include_directories(
-		${UnitTest++_INCLUDE_DIRS}
 		${czrpc_INCLUDE_DIRS}
 		${CMAKE_SOURCE_DIR}/asio/asio/include
 		)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 set_postfix()
+set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "samples")
+target_link_libraries(${PROJECT_NAME} SamplesCommon)
 
-target_link_libraries(${PROJECT_NAME} UnitTest++)
-add_commonlibs()
 
 
