--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,7 @@ add_subdirectory(tests)
 add_subdirectory(samples/SamplesCommon)
 add_subdirectory(samples/CalculatorServer)
 add_subdirectory(samples/ServerConsole)
+add_subdirectory(samples/Chat/ChatCommon)
+add_subdirectory(samples/Chat/ChatClient)
+add_subdirectory(samples/Chat/ChatServer)
 
