--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,8 +7,8 @@ SET(SOURCE_FILES
 		"Foo.h" "Foo.cpp"
 		"Semaphore.h"
 		"tests_any.cpp"
-		"tests_doc_a_small_taste.cpp"
-		"tests_doc_paramtraits.cpp"
+		#"tests_doc_a_small_taste.cpp"
+		#"tests_doc_paramtraits.cpp"
 		"tests_main.cpp"
 		"tests_rpc.cpp"
 		"tests_rpc_tcp.cpp"
