--- a/samples/Minimal/CMakeLists.txt
+++ b/samples/Minimal/CMakeLists.txt
@@ -1,20 +1,14 @@
 cmake_minimum_required(VERSION 3.5)
-project(tests)
+project(Minimal)
 
-include(../utils.cmake)
+include(../../utils.cmake)
 
 SET(SOURCE_FILES
-		"Foo.h" "Foo.cpp"
-		"tests_any.cpp"
-		#"tests_doc_a_small_taste.cpp"
-		#"tests_doc_paramtraits.cpp"
-		"tests_main.cpp"
-		"tests_rpc_tcp.cpp"
-		"tests_tcpsocket.cpp"
-		"tests_traits.cpp"
+		"Minimal.cpp"
+		"targetver.h"
 		)
 
-ADD_MSVC_PRECOMPILED_HEADER("testsPCH.h" "testsPCH.cpp" SOURCE_FILES)
+ADD_MSVC_PRECOMPILED_HEADER("${PROJECT_NAME}PCH.h" "${PROJECT_NAME}PCH.cpp" SOURCE_FILES)
 
 message( "CMAKE_EXE_LINKER_FLAGS = " ${CMAKE_EXE_LINKER_FLAGS})
 message( "COMPILER FLAGS USED")
@@ -25,14 +19,12 @@ message( "CMAKE_CXX_FLAGS_MINSIZEREL     = " ${CMAKE_CXX_FLAGS_MINSIZEREL})
 message( "CMAKE_CXX_FLAGS_RELWITHDEBINFO = " ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})
 
 include_directories(
-		${UnitTest++_INCLUDE_DIRS}
 		${czrpc_INCLUDE_DIRS}
 		)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 set_postfix()
-
-target_link_libraries(${PROJECT_NAME} UnitTest++)
+set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "samples")
+target_link_libraries(${PROJECT_NAME} SamplesCommon)
 add_commonlibs()
-
 
