Some work on czrpc unit tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,8 +10,9 @@ ucm_add_files(
 		#"tests_doc_paramtraits.cpp"
 		"tests_main.cpp"
 		"tests_rpc_spas.cpp"
-		"tests_rpc_tcp.cpp"
-		"tests_tcpsocket.cpp"
+		"tests_rpc_spas_helper.h"
+		#"tests_rpc_tcp.cpp"
+		#"tests_tcpsocket.cpp"
 		"tests_traits.cpp"
 		"testsPCH.cpp" "testsPCH.h"
 		TO SOURCE_FILES
