--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,15 +1,13 @@
-include(../cmake/ucm.cmake)
-include(../cmake/utils.cmake)
+cmake_minimum_required(VERSION 3.16)
 
-function(cz_setup_sample target_name)
+function(setup_czrpc_sample target_name)
 	add_executable(${target_name} ${ARGN})
-	cz_set_precompiled_header(${target_name} "${target_name}PCH.h" "${target_name}PCH.cpp")
-	set_target_properties(${target_name} PROPERTIES FOLDER "samples")
-	target_link_libraries(${target_name} SamplesCommon)
-	cz_set_postfix(${target_name})
+	target_precompile_headers(${target_name} PUBLIC "${target_name}PCH.h")
+	set_target_properties(${target_name} PROPERTIES FOLDER "samples/czrpc")
+	target_link_libraries(${target_name} Common)
 endfunction()
 
-add_subdirectory(SamplesCommon)
+add_subdirectory(Common)
 add_subdirectory(Minimal)
 add_subdirectory(CalculatorServer)
 add_subdirectory(ServerConsole)
