--- a/samples/CalculatorServer/CMakeLists.txt
+++ b/samples/CalculatorServer/CMakeLists.txt
@@ -1,7 +1,8 @@
-cz_setup_sample(CalculatorServer
+cmake_minimum_required(VERSION 3.16)
+
+setup_czrpc_sample(CalculatorServer
 		"CalculatorInterface.h"
 		"CalculatorServer.cpp"
 		"targetver.h"
-		"CalculatorServerPCH.cpp" "CalculatorServerPCH.h"
 		)
 
