--- a/samples/Chat/ChatCommon/CMakeLists.txt
+++ b/samples/Chat/ChatCommon/CMakeLists.txt
@@ -1,10 +1,9 @@
-ucm_add_files(
+set(SOURCE_FILES
 	"ChatInterface.h"
-	TO SOURCE_FILES
 	)
 
 add_library(ChatCommon INTERFACE)
 target_include_directories(ChatCommon INTERFACE "")
 add_custom_target(ChatCommon_ SOURCES ${SOURCE_FILES})
-set_target_properties(ChatCommon_ PROPERTIES FOLDER "samples/chat")
+set_target_properties(ChatCommon_ PROPERTIES FOLDER "samples/czrpc/chat")
 
