--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.16)
 
-ucm_add_files(
+set(SOURCE_FILES
 	"crazygaze/rpc/RPC.h"
 	"crazygaze/rpc/RPCAny.h"
 	"crazygaze/rpc/RPCCallstack.h"
@@ -18,15 +18,32 @@ ucm_add_files(
 	"crazygaze/rpc/RPCTransport.h"
 	"crazygaze/rpc/RPCUtils.h"
 	"crazygaze/rpc/RPCSpasTransport.h"
-	TO SOURCE_FILES
 	)
+
+source_group("crazygaze\\rpc" FILES ${SOURCE_FILES})
 
 # Adding as INTERFACE, since it's an header only library
 add_library(czrpc INTERFACE)
+add_library(cz::rpc ALIAS czrpc)
+
 target_include_directories(czrpc INTERFACE "")
 
-# czrpc uses czspas in the default transport
-target_link_libraries(czrpc INTERFACE czspas)
+###############################################################################################
+# Try and add czspas as a transport
+###############################################################################################
+
+# If there is a czspas folder present and the parent project didn't define a czspas target
+# then we define it
+# We check if the parent project added czspas and if not we look locally
+if (EXISTS "${CMAKE_CURRENT_LIST_DIR}/czspas" AND NOT TARGET cz::spas)
+	message("czspas folder found in czrpc. Adding czspas as a target")
+	add_subdirectory(czspas)
+endif()
+
+# Finally, if czspas target exists, then we add it
+if (TARGET cz::spas)
+	target_link_libraries(czrpc INTERFACE cz::spas)
+endif()
 
 # Dummy target so that header only libraries show up in the IDE
 add_custom_target(czrpc_ SOURCES ${SOURCE_FILES})
