--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.16)
 
 function(setup_czrpc_sample target_name)
-	add_executable(${target_name} ${ARGN})
-	target_precompile_headers(${target_name} PUBLIC "${target_name}PCH.h")
-	set_target_properties(${target_name} PROPERTIES FOLDER "samples/czrpc")
-	target_link_libraries(${target_name} Common)
+	add_executable(czrpc_sample_${target_name} ${ARGN})
+	target_precompile_headers(czrpc_sample_${target_name} PUBLIC "${target_name}PCH.h")
+	set_target_properties(czrpc_sample_${target_name} PROPERTIES FOLDER "${PROJECT_NAME}/samples")
+	target_link_libraries(czrpc_sample_${target_name} czrpc_sample_Common)
 endfunction()
 
 add_subdirectory(Common)
