--- a/samples/Chat/ChatClient/CMakeLists.txt
+++ b/samples/Chat/ChatClient/CMakeLists.txt
@@ -1,8 +1,9 @@
 setup_czrpc_sample (ChatClient
 		"ChatClient.cpp"
 		"targetver.h"
+		"ChatClientPCH.h"
 		)
 
-set_target_properties(ChatClient PROPERTIES FOLDER "samples/czrpc/chat")
-target_link_libraries(ChatClient ChatCommon)
+set_target_properties(czrpc_sample_ChatClient PROPERTIES FOLDER "${PROJECT_NAME}/samples/chat")
+target_link_libraries(czrpc_sample_ChatClient czrpc_sample_ChatCommon)
 
