--- a/samples/ServerConsole/CMakeLists.txt
+++ b/samples/ServerConsole/CMakeLists.txt
@@ -3,5 +3,6 @@ setup_czrpc_sample(ServerConsole
 		"ServerConsoleCommand.cpp"
 		"ServerConsoleCommand.h"
 		"targetver.h"
+		"ServerConsolePCH.h"
 		)
 
