--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,9 +8,10 @@ add_executable(czrpc_tests
 		"tests_rpc_spas_helper.cpp"
 		"tests_rpc_spas_helper.h"
 		"tests_traits.cpp"
+		"testsPCH.h"
 		)
 
 target_precompile_headers(czrpc_tests PUBLIC "testsPCH.h")
 target_link_libraries(czrpc_tests cz::rpc UnitTest++)
-set_property(TARGET czrpc_tests PROPERTY FOLDER "unit tests/czrpc")
+set_property(TARGET czrpc_tests PROPERTY FOLDER "${PROJECT_NAME}")
 
