--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 build/
-build32/
-build64/
-x64/
 
 # CLion IDE files
 .idea/
 
 # vim-vs temporary files
 /.vimvs-tmp*
+
+# Ignore dependencies that need to exist when doing standalone development
+/czspas
+/unittest-cpp
 
