added sqlite and nlohmann_json targets

--- a/samples/Chat/ChatCommon/CMakeLists.txt
+++ b/samples/Chat/ChatCommon/CMakeLists.txt
@@ -5,5 +5,5 @@ set(SOURCE_FILES
 add_library(czrpc_sample_ChatCommon INTERFACE)
 target_include_directories(czrpc_sample_ChatCommon INTERFACE "")
 add_custom_target(czrpc_sample_ChatCommon_ SOURCES ${SOURCE_FILES})
-set_target_properties(czrpc_sample_ChatCommon_ PROPERTIES FOLDER "${PROJECT_NAME}/samples/chat")
+set_target_properties(czrpc_sample_ChatCommon_ PROPERTIES FOLDER "${CZ_IDE_FOLDER}${PROJECT_NAME}/samples/chat")
 
