--- a/samples/Chat/ChatServer/CMakeLists.txt
+++ b/samples/Chat/ChatServer/CMakeLists.txt
@@ -4,6 +4,6 @@ setup_czrpc_sample(ChatServer
 		"ChatServerPCH.h"
 		)
 
-set_target_properties(czrpc_sample_ChatServer PROPERTIES FOLDER "${PROJECT_NAME}/samples/chat")
+set_target_properties(czrpc_sample_ChatServer PROPERTIES FOLDER "${CZ_IDE_FOLDER}${PROJECT_NAME}/samples/chat")
 target_link_libraries(czrpc_sample_ChatServer czrpc_sample_ChatCommon)
 
